2004-08-16 Magnus Hagdorn
 * data_dep.dot: added plot of data dependency
 * glide.f90: when hotstarting temp and flwa is read from file
 * added hotstart option: glide_types.f90, glide_setup.f90
 * ncdf_params.f90.in: select variables needed for hotstarting model
 * ncdf_vars.def: selected variables needed for hotstart
 * generate_ncvars.py: added hotstart, removed time-dep of some variables
 * glide.tex: added hostart doc
	
2004-08-13 Magnus Hagdorn
 glide.f90, glide_types.f90, glimmer_isot.f90, glimmer_temp.f90, glimmer_thck.f90, glimmer_velo.f90
 * moved initialisation code to separate subroutines which have to be called at start-up
 * also avoid repeated allocate/deallocate of arrays

2004-08-12 Magnus Hagdorn
 * forgot to scale basal traction constant (glide_types.f90, glimmer_velo.f90)

2004-08-12 Magnus Hagdorn
 * simple_forcing.f90: add EISMINT-2 forcing 
 * added constant basal traction/basal traction where water exists
   (glide_setup.f90, glide_types.f90, glimmer_velo.f90)
 * updated docs accordingly (glide.tex)
 * updated model config files accordingly (g_land.config, fennscan1.config)
	
2004-08-09 Magnus Hagdorn
 * glimmer_velo.f90: fix bug with staggered grid (vertical velo is 
   calculated on big grid), re-enabled normal gradient calc of ice
   thicknesses (not sure about this...)
 * fix bug in calculation of horizontal gradients (glimmer_thck.f90, glide.f90 )

2004-08-09 Magnus Hagdorn
 * fennscan1.config: saner switches
 * simple[1-3].config: forcing section renamed to 'EISMINT-1 moving margin'
 * marine margin handles sea-level change (glide.f90, glide_setup.f90 )
 * glimmer_config.f90: increased section name length to 50 characters
 * glimmer_velo.f90: adjust const flow parameter for EISMINT scenarios
 * simple_glide.f90: EISMINT climate is updated every time step
 * simple_forcing.f90: full set of EISMINT-1 forcing scenarios
 * updated docs (drivers.tex, glide.tex )
	
2004-08-03 Magnus Hagdorn
 * more doc stuff

2004-08-02 Magnus Hagdorn